add fix cors 6