@@ -1,15 +1,14 @@
 package infrastructure;
 
-import jakarta.servlet.Filter;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -18,22 +17,24 @@ public class CorsConfig {
     private String allowedOrigins;
 
     @Bean
-    public FilterRegistrationBean<Filter> corsFilter() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+
+        config.setAllowedOrigins(origins);
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+        ));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
-        FilterRegistrationBean<Filter> bean = new FilterRegistrationBean<>(new CorsFilter(source));
-        bean.setOrder(-1024); // важно: до других фильтров
+        System.out.println("✅ CORS настроен для: " + allowedOrigins);
 
-        System.out.println("✅ CORS фильтр зарегистрирован для: " + allowedOrigins);
-
-        return bean;
+        return source;
     }
 }
